MAN3_FILES = $(MAN3_FILES_PRIMARY) $(MAN3_FILES_SECONDARY)

MAN3_FILES_PRIMARY = \
	flux_open.3 \
	flux_send.3 \
	flux_recv.3 \
	flux_requeue.3 \
	flux_aux_set.3 \
	flux_flags_set.3 \
	flux_fatal_set.3 \
	flux_event_subscribe.3 \
	flux_event_publish.3 \
	flux_pollevents.3 \
	flux_msg_encode.3 \
	flux_msg_sendfd.3 \
	flux_rpc.3 \
	flux_mrpc.3 \
	flux_reduce_create.3 \
	flux_get_rank.3 \
	flux_attr_get.3 \
	flux_get_reactor.3 \
	flux_reactor_create.3 \
	flux_fd_watcher_create.3 \
	flux_watcher_start.3 \
	flux_zmq_watcher_create.3 \
	flux_handle_watcher_create.3 \
	flux_timer_watcher_create.3 \
	flux_periodic_watcher_create.3 \
	flux_idle_watcher_create.3 \
	flux_msg_handler_create.3 \
	flux_msg_cmp.3 \
	flux_msg_handler_addvec.3 \
	flux_child_watcher_create.3 \
	flux_signal_watcher_create.3 \
	flux_stat_watcher_create.3 \
	flux_respond.3 \
	flux_reactor_now.3 \
	flux_request_decode.3 \
	flux_event_decode.3 \
	flux_response_decode.3 \
	flux_request_encode.3 \
	flux_content_load.3 \
	flux_log.3 \
	flux_future_get.3 \
	flux_future_create.3 \
	flux_kvs_lookup.3 \
	flux_kvs_commit.3 \
	flux_kvs_txn_create.3 \
	flux_kvs_namespace_create.3 \
	flux_kvs_namespace_list.3 \
	flux_kvs_set_namespace.3 \
	idset_create.3

# These files are generated as roff .so includes of a primary page.
# A2X handles this automatically if mentioned in NAME section
MAN3_FILES_SECONDARY = \
	flux_clone.3 \
	flux_close.3 \
	flux_aux_get.3 \
	flux_flags_unset.3 \
	flux_flags_get.3 \
	flux_fatal_error.3 \
	FLUX_FATAL.3 \
	flux_event_unsubscribe.3 \
	flux_event_publish_pack.3 \
	flux_event_publish_raw.3 \
	flux_event_publish_get_seq.3 \
	flux_pollfd.3 \
	flux_msg_decode.3 \
	flux_msg_recvfd.3 \
	flux_reduce_destroy.3 \
	flux_reduce_append.3 \
	flux_reduce_pop.3 \
	flux_reduce_push.3 \
	flux_reduce_opt_set.3 \
	flux_reduce_opt_get.3 \
	flux_get_size.3 \
	flux_attr_set.3 \
	flux_attr_first.3 \
	flux_attr_next.3 \
	flux_set_reactor.3 \
	flux_reactor_destroy.3 \
	flux_reactor_run.3 \
	flux_reactor_stop.3 \
	flux_reactor_stop_error.3 \
	flux_fd_watcher_get_fd.3 \
	flux_watcher_stop.3 \
	flux_watcher_destroy.3 \
	flux_watcher_next_wakeup.3 \
	flux_zmq_watcher_get_zsock.3 \
	flux_handle_watcher_get_flux.3 \
	flux_timer_watcher_reset.3 \
	flux_periodic_watcher_reset.3 \
	flux_prepare_watcher_create.3 \
	flux_check_watcher_create.3 \
	flux_msg_handler_destroy.3 \
	flux_msg_handler_start.3 \
	flux_msg_handler_stop.3 \
	flux_msg_handler_delvec.3 \
	flux_child_watcher_get_rpid.3 \
	flux_child_watcher_get_rstatus.3 \
	flux_signal_watcher_get_signum.3 \
	flux_stat_watcher_get_rstat.3 \
	flux_respond_raw.3 \
	flux_respond_pack.3 \
	flux_reactor_now_update.3 \
	flux_request_unpack.3 \
	flux_request_decode_raw.3 \
	flux_event_unpack.3 \
	flux_event_encode.3 \
	flux_event_pack.3 \
	flux_event_encode_raw.3 \
	flux_event_decode_raw.3 \
	flux_response_decode_raw.3 \
	flux_request_encode_raw.3 \
	flux_content_load_get.3 \
	flux_content_store.3 \
	flux_content_store_get.3 \
	flux_vlog.3 \
	flux_log_set_appname.3 \
	flux_log_set_procid.3 \
	flux_future_then.3 \
	flux_future_wait_for.3 \
	flux_future_reset.3 \
	flux_future_destroy.3 \
	flux_future_get.3 \
	flux_future_fulfill.3 \
	flux_future_fulfill_error.3 \
	flux_future_aux_set.3 \
	flux_future_aux_get.3 \
	flux_future_set_flux.3 \
	flux_future_get_flux.3 \
	flux_rpc_pack.3 \
	flux_rpc_raw.3 \
	flux_rpc_get.3 \
	flux_rpc_get_unpack.3 \
	flux_rpc_get_raw.3 \
	flux_kvs_lookupat.3 \
	flux_kvs_lookup_get.3 \
	flux_kvs_lookup_get_unpack.3 \
	flux_kvs_lookup_get_raw.3 \
	flux_kvs_lookup_get_dir.3 \
	flux_kvs_lookup_get_treeobj.3 \
	flux_kvs_lookup_get_symlink.3 \
	flux_kvs_fence.3 \
	flux_kvs_txn_destroy.3 \
	flux_kvs_txn_put.3 \
	flux_kvs_txn_pack.3 \
	flux_kvs_txn_vpack.3 \
	flux_kvs_txn_mkdir.3 \
	flux_kvs_txn_unlink.3 \
	flux_kvs_txn_symlink.3 \
	flux_kvs_txn_put_raw.3 \
	flux_kvs_namespace_remove.3 \
	flux_kvs_namespace_itr_next.3 \
	flux_kvs_namespace_itr_rewind.3 \
	flux_kvs_namespace_itr_destroy.3 \
	flux_kvs_get_namespace.3 \
	idset_destroy.3 \
	idset_encode.3 \
	idset_decode.3

ADOC_FILES  = $(MAN3_FILES_PRIMARY:%.3=%.adoc)
XML_FILES   = $(MAN3_FILES_PRIMARY:%.3=%.xml)

if ENABLE_DOCS
dist_man_MANS = $(MAN3_FILES)
$(MAN3_FILES): COPYRIGHT.adoc JSON_PACK.adoc JSON_UNPACK.adoc
endif

SUFFIXES = .adoc .3

STDERR_DEVNULL = $(stderr_devnull_$(V))
stderr_devnull_ =  $(stderr_devnull_$(AM_DEFAULT_VERBOSITY))
stderr_devnull_0 = 2>/dev/null

.adoc.3:
	$(AM_V_GEN)$(A2X) --attribute mansource=$(PACKAGE_NAME) \
	    --attribute manversion=$(PACKAGE_VERSION) \
	    --attribute manmanual="Flux Programming Reference" \
	    --destination-dir=$(builddir) \
	    --doctype manpage --format manpage $< $(STDERR_DEVNULL)


flux_clone.3: flux_open.3
flux_close.3: flux_open.3
flux_aux_get.3: flux_aux_set.3
flux_flags_unset.3: flux_flags_set.3
flux_flags_get.3: flux_flags_set.3
flux_fatal_error.3: flux_fatal_set.3
FLUX_FATAL.3: flux_fatal_set.3
flux_event_unsubscribe.3: flux_event_subscribe.3
flux_event_publish_pack.3: flux_event_publish.3
flux_event_publish_raw.3: flux_event_publish.3
flux_event_publish_get_seq.3: flux_event_publish.3
flux_pollfd.3: flux_pollevents.3
flux_msg_decode.3: flux_msg_encode.3
flux_msg_recvfd.3: flux_msg_sendfd.3
flux_reduce_destroy.3: flux_reduce_create.3
flux_reduce_append.3: flux_reduce_create.3
flux_reduce_pop.3: flux_reduce_create.3
flux_reduce_push.3: flux_reduce_create.3
flux_reduce_opt_set.3: flux_reduce_create.3
flux_reduce_opt_get.3: flux_reduce_create.3
flux_get_size.3: flux_get_rank.3
flux_attr_set.3: flux_attr_get.3
flux_attr_first.3: flux_attr_get.3
flux_attr_next.3: flux_attr_get.3
flux_set_reactor.3: flux_get_reactor.3
flux_reactor_destroy.3: flux_reactor_create.3
flux_reactor_run.3: flux_reactor_create.3
flux_reactor_stop.3: flux_reactor_create.3
flux_reactor_error.3: flux_reactor_create.3
flux_fd_watcher_get_fd.3: flux_fd_watcher_create.3
flux_watcher_stop.3: flux_watcher_start.3
flux_watcher_destroy.3: flux_watcher_start.3
flux_watcher_next_wakeup.3: flux_watcher_start.3
flux_zmq_watcher_get_zsock.3: flux_zmq_watcher_create.3
flux_handle_watcher_get_flux.3: flux_handle_watcher_create.3
flux_timer_watcher_reset.3: flux_timer_watcher_create.3
flux_periodic_watcher_reset.3: flux_periodic_watcher_create.3
flux_prepare_watcher_create.3: flux_idle_watcher_create.3
flux_check_watcher_create.3: flux_idle_watcher_create.3
flux_msg_handler_destroy.3: flux_msg_handler_create.3
flux_msg_handler_start.3: flux_msg_handler_create.3
flux_msg_handler_stop.3: flux_msg_handler_create.3
flux_msg_handler_delvec.3: flux_msg_handler_addvec.3
flux_child_watcher_get_rpid.3: flux_child_watcher_create.3
flux_child_watcher_get_rstatus.3: flux_child_watcher_create.3
flux_signal_watcher_get_signum.3: flux_signal_watcher_create.3
flux_stat_watcher_get_rstat.3: flux_stat_watcher_create.3
flux_respond_raw.3: flux_respond.3
flux_respond_pack.3: flux_respond.3
flux_reactor_now_update.3: flux_reactor_now.3
flux_request_unpack.3: flux_request_decode.3
flux_request_decode_raw.3: flux_request_decode.3
flux_event_unpack.3: flux_event_decode.3
flux_event_encode.3: flux_event_decode.3
flux_event_pack.3: flux_event_decode.3
flux_event_encode_raw.3: flux_event_decode.3
flux_event_decode_raw.3: flux_event_decode.3
flux_response_decode_raw.3: flux_response_decode.3
flux_request_encode_raw.3: flux_request_encode.3
flux_content_load_get.3: flux_content_load.3
flux_content_store.3: flux_content_load.3
flux_content_store_get.3: flux_content_load.3
flux_vlog.3: flux_log.3
flux_log_set_appname.3: flux_log.3
flux_log_set_procid.3: flux_log.3
flux_future_reset.3: flux_future_get.3
flux_future_destroy.3: flux_future_get.3
flux_future_wait_for.3: flux_future_get.3
flux_future_then.3: flux_future_get.3
flux_future_fulfill.3: flux_future_create.3
flux_future_fulfill_error.3: flux_future_create.3
flux_future_aux_set.3: flux_future_create.3
flux_future_aux_get.3: flux_future_create.3
flux_future_set_flux.3: flux_future_create.3
flux_future_get_flux.3: flux_future_create.3
flux_rpc_pack.3: flux_rpc.3
flux_rpc_raw.3: flux_rpc.3
flux_rpc_get.3: flux_rpc.3
flux_rpc_get_unpack.3: flux_rpc.3
flux_rpc_get_raw.3: flux_rpc.3
flux_kvs_lookupat.3: flux_kvs_lookup.3
flux_kvs_lookup_get.3: flux_kvs_lookup.3
flux_kvs_lookup_get_unpack.3: flux_kvs_lookup.3
flux_kvs_lookup_get_raw.3: flux_kvs_lookup.3
flux_kvs_lookup_get_dir.3: flux_kvs_lookup.3
flux_kvs_lookup_treeobj.3: flux_kvs_lookup.3
flux_kvs_lookup_symlink.3: flux_kvs_lookup.3
flux_kvs_fence.3: flux_kvs_commit.3
flux_kvs_txn_destroy.3: flux_kvs_txn_create.3
flux_kvs_txn_put.3: flux_kvs_txn_create.3
flux_kvs_txn_pack.3: flux_kvs_txn_create.3
flux_kvs_txn_vpack.3: flux_kvs_txn_create.3
flux_kvs_txn_mkdir.3: flux_kvs_txn_create.3
flux_kvs_txn_unlink.3: flux_kvs_txn_create.3
flux_kvs_txn_symlink.3: flux_kvs_txn_create.3
flux_kvs_txn_put_raw.3: flux_kvs_txn_create.3
# N.B. exceeds max 8 stubs  flux_kvs_txn_put_treeobj.3: flux_kvs_txn_create.3
flux_kvs_namespace_remove.3: flux_kvs_namespace_create.3
flux_kvs_namespace_itr_next.3: flux_kvs_namespace_list.3
flux_kvs_namespace_itr_rewind.3: flux_kvs_namespace_list.3
flux_kvs_namespace_itr_destroy.3: flux_kvs_namespace_list.3
flux_kvs_get_namespace.3: flux_kvs_set_namespace.3
idset_destroy.3: idset_create.3
idset_encode.3: idset_create.3
idset_decode.3: idset_create.3

flux_open.3: topen.c
flux_send.3: tsend.c
flux_recv.3: trecv.c
flux_event_subscribe.3: tevent.c
flux_rpc.3: trpc.c
flux_rpc.3: trpc_then.c
flux_mrpc.3: tmrpc_then.c
flux_reduce_create.3: treduce.c
flux_get_rank.3: tinfo.c



EXTRA_DIST = $(ADOC_FILES) COPYRIGHT.adoc JSON_PACK.adoc JSON_UNPACK.adoc

CLEANFILES = $(MAN3_FILES) $(XML_FILES)

AM_CFLAGS = \
	$(WARNING_CFLAGS) \
	$(CODE_COVERAGE_CFLAGS)

AM_LDFLAGS = \
	$(CODE_COVERAGE_LIBS)

AM_CPPFLAGS = \
        -I$(top_srcdir) -I$(top_srcdir)/src/include \
        $(ZMQ_CFLAGS)

LDADD = \
        $(top_builddir)/src/common/libflux-internal.la \
        $(top_builddir)/src/common/libflux-core.la \
        $(ZMQ_LIBS) $(LIBPTHREAD)

check_PROGRAMS = \
	topen \
	tsend \
	trecv \
	tevent \
	trpc \
	trpc_then \
	tmrpc_then \
	tinfo

check_LTLIBRARIES = \
	treduce.la

treduce_la_SOURCES = treduce.c
treduce_la_LDFLAGS = -module -rpath /nowhere \
        -export-symbols-regex '^mod_(main|name)$$' \
	-export-sym--disable-static -avoid-version -shared -export-dynamic
